added signup, fixed log in bug

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Jacket</title>
-  <link rel="stylesheet" type="text/css" href="/css/jass.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/jass.css">
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 </head>
 
@@ -22,15 +22,12 @@
     {{/if}}
   </nav>
   <main>
-    <aside>
-      <h2>Samehada</h2>
-    </aside>
-    <div class="gallery">
+    <div class="content">
       {{{body}}}
     </div>
   </main>
   {{#if loggedIn}}
-  <script src="/js/logout.js"></script>
+  <script src="/assets/js/logout.js"></script>
   {{/if}}
 </body>
 
