--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -76,6 +76,10 @@
     transition: color 0.1s;
     margin-left: 16px;
   }
+
+  .content {
+    margin: auto;
+  }
   
   img {
     max-width: 100%;
@@ -94,8 +98,7 @@
   
   .login-card {
     margin: 0 0 20px 0;
-    flex: 0 0 50%;
-    max-width: 50%;
+    width: 500px;
     padding: 5px;
     border: 3px solid var(--dark);
     border-radius: var(--border-radius);
