--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -16,6 +16,7 @@
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
+        <a href="/login">Log in</a>
       </div>
     </form>
   </div>
