--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -77,6 +77,10 @@
     margin-left: 16px;
   }
 
+  .post-btn {
+    margin-left: 280px;
+  }
+
   .content {
     margin-top: 50px;
     margin-left: auto;
