--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,4 +2,4 @@
 {{> post-details}}
 {{/each}}
 
-<button class="post-button">New Post</button>
+<button class="btn btn-secondary post-btn">New Post</button>
