--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -1,10 +1,4 @@
 <section class="card">
-  <a href="/painting/{{id}}">
-    <header>{{title}}</header>
-
-    <div class="card-body">
-      <img src="/images/{{filename}}" alt="{{description}}">
-      <p>By: {{artist}}</p>
-    </div>
-  </a>
+    <p>{{content}}</p>
+    <p>Posted by {{user_id}} at {{post_time}}</p>
 </section>
