--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,6 +1,7 @@
 <section class="card">
-  <a href="/posts/{{id}}">
+  <a href="/post/{{id}}">
     <header>{{title}}</header>
     <p>{{content}}</p>
+    <p>Posted by {{username}} at {{post_time}}</p>
   </a>
 </section>
