--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -5,3 +5,13 @@
 {{#each comments}}
 {{> comment-details}}
 {{/each}}
+
+<div id="comment-box">
+    <label for="comment input">Add Comment</label>
+    <textarea rows="5" cols="50" id="comment-input" placeholder="Enter comment"></textarea>
+    <br>
+    <button class="btn btn-secondary" id="post">Post Comment</button>
+</div>
+
+
+<script src="../../assets/js/add-comment.js"></script>
