added add-post feature

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -7,7 +7,7 @@
 {{/each}}
 
 <div id="comment-box">
-    <label for="comment input">Add Comment</label>
+    <p>Add Comment</p>
     <textarea rows="5" cols="50" id="comment-input" placeholder="Enter comment"></textarea>
     <br>
     <button class="btn btn-secondary" id="post">Post Comment</button>
