--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,4 +2,6 @@
 {{> post-details}}
 {{/each}}
 
-<button class="btn btn-secondary post-btn">New Post</button>
+<button class="btn btn-secondary post-btn" id="new-post">New Post</button>
+
+<script src="../../assets/js/dashboard.js"></script>
