--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -1,3 +1,4 @@
+{{#each posts as |post|}}
 <div class="row justify-space-between-md">
   <div class="card">
     <h2 class="page-title">New Post</h2>
@@ -7,8 +8,8 @@
         <header>{{title}}</header>
       </div>
       <div class="form-group">
-        <label for="content">Insert Content:</label>
-        <textarea rows="5" cols="50" id="content" placeholder="Enter Content"></textarea>
+        <label for="update-content">Insert Content:</label>
+        <textarea rows="5" cols="50" id="update-content" placeholder="Enter Content"></textarea>
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit" id="update-post">Update Post</button>
@@ -16,5 +17,6 @@
     </form>
   </div>
 </div>
+{{/each}}
 
-<script src="../../assets/js/new-post.js"></script>
+<script src="../../assets/js/update.js"></script>
