--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -1,5 +1,5 @@
 <div class="row justify-space-between-md">
-  <div class="card">
+  <div class="login-card">
     <h2 class="page-title">New Post</h2>
     <form class="form new-post-form">
       <div class="form-group">
