--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -1,11 +1,11 @@
 {{#each posts as |post|}}
 <div class="row justify-space-between-md">
-  <div class="card">
-    <h2 class="page-title">New Post</h2>
+  <div class="login-card">
+    <h2 class="page-title">Update Post</h2>
     <form class="form new-post-form">
       <div class="form-group">
         <label for="title">Title:</label>
-        <header>{{title}}</header>
+        <h4>{{title}}</h4>
       </div>
       <div class="form-group">
         <label for="update-content">Insert Content:</label>
