changed user_ids to usernames in posts/comments

--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -1,4 +1,4 @@
 <section class="card">
     <p>{{content}}</p>
-    <p>Posted by {{user_id}} at {{post_time}}</p>
+    <p>Posted by {{user.username}} at {{post_time}}</p>
 </section>
