--- a/views/partials/own-post-details.handlebars
+++ b/views/partials/own-post-details.handlebars
@@ -1,7 +1,7 @@
 <section class="card">
     <header>{{title}}</header>
     <p>{{content}}</p>
-    <p>Posted by {{user_id}} at {{post_time}}</p>
+    <p>Posted by {{user.username}} at {{post_time}}</p>
     <button class="btn btn-secondary" id="update">Update Post</button>
     <button class="btn btn-secondary" id="delete">Delete Post</button>
 </section>
