--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -2,6 +2,6 @@
   <a href="/post/{{id}}">
     <header>{{title}}</header>
     <p>{{content}}</p>
-    <p>Posted by {{user_id}} at {{post_time}}</p>
+    <p>Posted by {{user.username}} at {{post_time}}</p>
   </a>
 </section>
