--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -6,9 +6,9 @@
 {{> comment-details}}
 {{/each}}
 
-<div id="comment-box">
+<div class="card">
     <p>Add Comment</p>
-    <textarea rows="5" cols="50" id="comment-input" placeholder="Enter comment"></textarea>
+    <textarea rows="5" cols="90" id="comment-input" placeholder="Enter comment"></textarea>
     <br>
     <button class="btn btn-secondary" id="post">Post Comment</button>
 </div>
