--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech Jacket</title>
+  <title>Tech Jack</title>
   <link rel="stylesheet" type="text/css" href="/assets/css/jass.css">
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 </head>
 
 <body>
   <header>
-    <h1>Tech Jacket</h1>
+    <h1>Tech Jack</h1>
   </header>
   <nav>
     <a href="/">Home</a>
